px4_ws/logs/px4_offboard/build.make.083.log.stderr
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/Mission.cpp: In member function 'void Mission::obstCallback(geometry_msgs::Point)':
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/Mission.cpp:273:37: error: expected identifier before '(' token
  if (_flight_mode > calibration) && (msg.y < 800) )//failsafe object detect
                                     ^
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/Mission.cpp:273:37: error: expected ';' before '(' token
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/Mission.cpp:382:1: error: expected '}' at end of input
 }
 ^
make[2]: *** [CMakeFiles/mission.dir/src/Mission.cpp.o] Error 1
make[1]: *** [CMakeFiles/mission.dir/all] Error 2
make: *** [all] Error 2
